Fixes issue with facet component width, sizing & truncation Selected facet layout changes - add ellipsis Results width to 95% Fixed layout of selected facet so that long names do not encroach on the results

--- a/web/src/main/ui/app/components/traces/ui/traces-ui.component.scss
+++ b/web/src/main/ui/app/components/traces/ui/traces-ui.component.scss
@@ -33,7 +33,7 @@ input[type="search"] {
 }
 
 .results {
-  width: 90%;
+  width: 95%;
 }
 
 .mdi-alert {
